--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,6 +52,7 @@ body {
 }
 // aside
 .aside {
+    font-family: "Montserrat", sans-serif;
     display: flex;
     justify-content: center;
     max-width: 304px;
@@ -336,6 +337,7 @@ body {
 }
 .header__btn {
     // font-family: TT Firs Text Trial;
+    font-family: "Montserrat", sans-serif;
     display: flex;
     align-items: center;
     font-weight: 600;
