--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 400px;
+  height: 685px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -489,6 +489,7 @@ body {
 .content__video video {
   width: 100%;
   height: auto;
+  opacity: 0.4;
 }
 
 .content__video::after {
