--- a/scss/style.scss
+++ b/scss/style.scss
@@ -397,7 +397,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 400px;
+    height: 685px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -405,6 +405,7 @@ body {
     video {
         width: 100%;
         height: auto;
+        opacity: 0.4;
     }
 }
 .content__video::after {
