--- a/scss/style.scss
+++ b/scss/style.scss
@@ -369,6 +369,7 @@ body {
     .container {
         position: relative;
         z-index: 2;
+        padding-top: 32px;
     }
     h6 {
         // font-family: TT Livret Text Trial;
