--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,34 @@
+@font-face {
+    font-family: 'TT Firs Text Trial';
+    src: url('../font/tt_fors/TT_Fors_Trial_Regular.ttf');
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'TT Livret Text Trial';
+    src: url('../font/tt_livret_text/TT\ Livret\ Text\ Trial\ Light.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'TT Livret Text Trial';
+    src: url('../font/tt_livret_text/TT\ Livret\ Text\ Trial\ Light\ Italic.ttf');
+    font-weight: 400;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'TT Livret Text Trial';
+    src: url('../font/tt_livret_text/TT\ Livret\ Text\ Trial\ Medium.ttf');
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'TT Livret Text Trial';
+    src: url('../font/tt_livret_text/TT\ Livret\ Text\ Trial\ Medium\ Italic.ttf');
+    font-weight: 600;
+    font-style: italic;
+}
+
 *, *::before, *::after {
     margin: 0;
     padding: 0;
@@ -42,9 +73,8 @@ ul, ol {
 }
 
 body {
-    font-family: "Playfair Display", serif;
     background: rgba(22, 21, 21, 1);
-    color: #fff;
+    color: var(--white);
 }
 
 .main {
@@ -52,7 +82,7 @@ body {
 }
 // aside
 .aside {
-    font-family: "Montserrat", sans-serif;
+    font-family: 'TT Firs Text Trial', sans-serif;
     display: flex;
     justify-content: center;
     max-width: 304px;
@@ -136,7 +166,7 @@ body {
         cursor: pointer;
         span {
             min-width: 56px;
-            // font-family: TT Livret Text Trial;
+            font-family: TT Livret Text Trial;
             font-weight: 400;
             font-size: 12px;
             line-height: 16px;
@@ -153,6 +183,7 @@ body {
         height: 0;
         overflow: hidden;
         li {
+            font-family: 'TT Livret Text Trial', sans-serif;
             font-weight: 400;
             font-size: 12px;
             line-height: 16px;
@@ -372,7 +403,7 @@ body {
         padding-top: 32px;
     }
     h6 {
-        // font-family: TT Livret Text Trial;
+        font-family: 'TT Livret Text Trial', sans-serif;
         font-weight: 400;
         font-size: 12px;
         line-height: 16px;
@@ -421,7 +452,7 @@ body {
 }
 h1 {
     margin: 64px 0 72px 0;
-    // font-family: TT Livret Text Trial;
+    font-family: 'TT Livret Text Trial', sans-serif;
     font-weight: 600;
     font-style: italic;
     font-size: 32px;
@@ -448,6 +479,15 @@ h1::after {
     right: 0;
     background: url(../img/after.svg) no-repeat center;
 }
+h2 {
+    font-family: 'TT Livret Text Trial', sans-serif;
+    font-weight: 600;
+    font-style: italic;
+    font-size: 32px;
+    line-height: 48px;
+    margin-bottom: 32px;
+    text-align: center;
+}
 .content__wrap {
     padding-top: 64px;
     padding-bottom: 64px;
@@ -455,7 +495,7 @@ h1::after {
 }
 .content__text {
     margin-bottom: 32px;
-    // font-family: TT Livret Text Trial;
+    font-family: 'TT Livret Text Trial', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
@@ -464,6 +504,9 @@ h1::after {
     color: var(--White-100, rgba(255, 255, 255, 1));
     b {
         font-weight: 600;
+    }
+    i {
+        font-style: italic;
     }
 }
 .main.close {
