--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ ul, ol {
 }
 
 .container {
-  max-width: 944px;
+  max-width: 59rem; /* 944px */
   width: 100%;
   margin: 0 auto;
   -webkit-transition: all 0.5s ease;
@@ -94,10 +94,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  max-width: 304px;
+  max-width: 19rem; /* 304px */
   width: 100%;
   min-height: 100vh;
-  border-right: 1px solid var(--White-5, rgba(255, 255, 255, 0.05));
+  border-right: 0.0625rem solid var(--White-5, rgba(255, 255, 255, 0.05)); /* 1px */
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   overflow: hidden;
@@ -111,15 +111,15 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-width: 304px;
-  width: 304px;
+  min-width: 19rem; /* 304px */
+  width: 19rem; /* 304px */
   max-height: 100vh;
   overflow-y: auto;
   position: relative;
 }
 
 .aside__wrap::-webkit-scrollbar {
-  width: 6px;
+  width: 0.375rem; /* 6px */
 }
 
 .aside__wrap::-webkit-scrollbar-track {
@@ -135,37 +135,37 @@ body {
 }
 
 .aside__logo {
-  padding: 32px;
+  padding: 2rem; /* 32px */
   position: sticky;
   top: 0;
   z-index: 2;
   background: rgb(22, 21, 21);
-  border-bottom: 1px solid var(--White-5, rgba(255, 255, 255, 0.05));
+  border-bottom: 0.0625rem solid var(--White-5, rgba(255, 255, 255, 0.05)); /* 1px */
 }
 .aside__logo img {
-  margin-bottom: 7px;
+  margin-bottom: 0.4375rem; /* 7px */
 }
 .aside__logo img:last-child {
   margin-bottom: 0;
 }
 
 .aside__block {
-  border-top: 1px solid var(--White-5, rgba(255, 255, 255, 0.05));
-  padding: 24px 32px;
+  border-top: 0.0625rem solid var(--White-5, rgba(255, 255, 255, 0.05)); /* 1px */
+  padding: 1.5rem 2rem; /* 24px 32px */
 }
 .aside__block h5 {
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
-  margin-bottom: 24px;
-  margin-top: -8px;
+  margin-bottom: 1.5rem; /* 24px */
+  margin-top: -0.5rem; /* -8px */
 }
 .aside__block h6 {
   font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-30, rgba(255, 255, 255, 0.3));
@@ -176,15 +176,15 @@ body {
 }
 
 .aside__accordeon {
-  margin-bottom: 16px;
+  margin-bottom: 1rem; /* 16px */
 }
 .aside__accordeon .btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-50, rgba(255, 255, 255, 0.5));
@@ -193,14 +193,14 @@ body {
   cursor: pointer;
 }
 .aside__accordeon .btn span {
-  min-width: 56px;
+  min-width: 3.5rem; /* 56px */
   font-family: TT Livret Text Trial;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
-  margin-right: 16px;
+  margin-right: 1rem; /* 16px */
   color: var(--White-30, rgba(255, 255, 255, 0.3));
 }
 .aside__accordeon .btn.active, .aside__accordeon .btn:hover {
@@ -213,19 +213,19 @@ body {
 .aside__accordeon .block li {
   font-family: "TT Livret Text Trial", sans-serif;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
-  margin-bottom: 16px;
-  padding-left: 13px;
+  margin-bottom: 1rem; /* 16px */
+  padding-left: 0.8125rem; /* 13px */
   position: relative;
 }
 .aside__accordeon .block li::before {
   content: "•";
   font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-25, rgba(255, 255, 255, 0.25));
@@ -240,15 +240,15 @@ body {
 }
 .aside__accordeon .btn.active + .block {
   height: auto;
-  padding-top: 24px;
-  padding-bottom: 16px;
+  padding-top: 1.5rem; /* 24px */
+  padding-bottom: 1rem; /* 16px */
 }
 
 .aside__color {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem; /* 40px */
 }
 .aside__color h4 {
   display: -webkit-box;
@@ -258,16 +258,16 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
 }
 .aside__color h4 .icon {
-  width: 14px;
-  height: 14px;
+  width: 0.875rem; /* 14px */
+  height: 0.875rem; /* 14px */
   background: url(../img/color.svg) no-repeat center;
-  margin-right: 10px;
+  margin-right: 0.625rem; /* 10px */
 }
 
 .color_items {
@@ -277,8 +277,8 @@ body {
   margin-left: auto;
 }
 .color_items .color {
-  width: 16px;
-  height: 16px;
+  width: 1rem; /* 16px */
+  height: 1rem; /* 16px */
   border-radius: 50%;
 }
 .color_items .color.white {
@@ -297,22 +297,22 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 8px;
+  margin-right: 0.5rem; /* 8px */
   cursor: pointer;
 }
 .color_items .item p {
   width: 0;
   overflow: hidden;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
 }
 .color_items .item.active p {
   width: auto;
-  padding-left: 4px;
-  padding-right: 8px;
+  padding-left: 0.25rem; /* 4px */
+  padding-right: 0.5rem; /* 8px */
 }
 .color_items .item:last-child {
   margin-right: 0;
@@ -322,7 +322,7 @@ body {
 }
 
 .aside__fonts {
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem; /* 20px */
 }
 .aside__fonts .item {
   display: -webkit-box;
@@ -331,10 +331,10 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem; /* 40px */
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
 }
@@ -347,9 +347,9 @@ body {
           align-items: center;
 }
 .aside__fonts .title .icon {
-  min-width: 16px;
-  width: 16px;
-  height: 16px;
+  min-width: 1rem; /* 16px */
+  width: 1rem; /* 16px */
+  height: 1rem; /* 16px */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -359,7 +359,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-right: 8px;
+  margin-right: 0.5rem; /* 8px */
 }
 .aside__fonts .item:last-child {
   margin-bottom: 0;
@@ -367,19 +367,19 @@ body {
 
 .aside__botttm {
   margin-top: auto;
-  padding: 32px;
+  padding: 2rem; /* 32px */
 }
 .aside__botttm h5 {
   font-weight: 600;
-  font-size: 10px;
-  line-height: 16px;
+  font-size: 0.625rem; /* 10px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
 }
 .aside__botttm a {
   font-weight: 400;
-  font-size: 10px;
-  line-height: 16px;
+  font-size: 0.625rem; /* 10px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-25, rgba(255, 255, 255, 0.25));
@@ -391,11 +391,11 @@ body {
 }
 
 .header {
-  max-width: 1500px;
+  max-width: 93.75rem; /* 1500px */
   width: 100%;
-  padding: 0 48px;
-  padding-top: 44px;
-  padding-bottom: 28px;
+  padding: 0 3rem; /* 0 48px */
+  padding-top: 2.75rem; /* 44px */
+  padding-bottom: 1.75rem; /* 28px */
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   position: sticky;
@@ -413,8 +413,8 @@ body {
 }
 
 .header__icon {
-  width: 32px;
-  height: 32px;
+  width: 2rem; /* 32px */
+  height: 2rem; /* 32px */
   background: url(../img/icon.svg) no-repeat center;
   border: 0;
 }
@@ -430,8 +430,8 @@ body {
 }
 
 .header__save {
-  width: 24px;
-  height: 24px;
+  width: 1.5rem; /* 24px */
+  height: 1.5rem; /* 24px */
   background: url(../img/save.svg) no-repeat center;
   border: 0;
 }
@@ -445,22 +445,22 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-weight: 600;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   color: var(--White-100, rgb(255, 255, 255));
   vertical-align: middle;
-  padding: 8px 18px 8px 16px;
+  padding: 0.5rem 1.125rem 0.5rem 1rem; /* 8px 18px 8px 16px */
   background: transparent;
-  border: 1px solid var(--White-10, rgba(255, 255, 255, 0.1));
-  border-radius: 100px;
-  margin-left: 16px;
+  border: 0.0625rem solid var(--White-10, rgba(255, 255, 255, 0.1)); /* 1px */
+  border-radius: 6.25rem; /* 100px */
+  margin-left: 1rem; /* 16px */
 }
 .header__btn .icon {
-  width: 24px;
-  height: 24px;
+  width: 1.5rem; /* 24px */
+  height: 1.5rem; /* 24px */
   background: url(../img/header-btn.svg) no-repeat center;
-  margin-right: 11px;
+  margin-right: 0.6875rem; /* 11px */
 }
 
 .content {
@@ -474,20 +474,20 @@ body {
 .content .container {
   position: relative;
   z-index: 2;
-  padding-top: 32px;
+  padding-top: 2rem; /* 32px */
 }
 .content h6 {
   font-family: "TT Livret Text Trial", sans-serif;
   font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-50, rgba(255, 255, 255, 0.5));
 }
 
 .content::-webkit-scrollbar {
-  width: 8px;
+  width: 0.5rem; /* 8px */
 }
 
 .content::-webkit-scrollbar-track {
@@ -507,7 +507,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 685px;
+  height: 42.8125rem; /* 685px */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -528,7 +528,7 @@ body {
 .content__video::after {
   content: "";
   width: 100%;
-  height: 70px;
+  height: 4.375rem; /* 70px */
   position: absolute;
   z-index: 1;
   bottom: 0;
@@ -538,12 +538,12 @@ body {
 }
 
 h1 {
-  margin: 64px 0 72px 0;
+  margin: 4rem 0 4.5rem 0; /* 64px 0 72px 0 */
   font-family: "TT Livret Text Trial", sans-serif;
   font-weight: 600;
   font-style: italic;
-  font-size: 32px;
-  line-height: 48px;
+  font-size: 2rem; /* 32px */
+  line-height: 3rem; /* 48px */
   letter-spacing: 0%;
   vertical-align: middle;
   position: relative;
@@ -551,20 +551,20 @@ h1 {
 
 h1::before {
   content: "";
-  width: 16px;
-  height: 12px;
+  width: 1rem; /* 16px */
+  height: 0.75rem; /* 12px */
   position: absolute;
-  top: -32px;
+  top: -2rem; /* -32px */
   left: 0;
   background: url(../img/before.svg) no-repeat center;
 }
 
 h1::after {
   content: "";
-  width: 16px;
-  height: 12px;
+  width: 1rem; /* 16px */
+  height: 0.75rem; /* 12px */
   position: absolute;
-  bottom: -24px;
+  bottom: -1.5rem; /* -24px */
   right: 0;
   background: url(../img/after.svg) no-repeat center;
 }
@@ -573,24 +573,24 @@ h2 {
   font-family: "TT Livret Text Trial", sans-serif;
   font-weight: 600;
   font-style: italic;
-  font-size: 32px;
-  line-height: 48px;
-  margin-bottom: 32px;
+  font-size: 2rem; /* 32px */
+  line-height: 3rem; /* 48px */
+  margin-bottom: 2rem; /* 32px */
   text-align: center;
 }
 
 .content__wrap {
-  padding-top: 64px;
-  padding-bottom: 64px;
-  border-top: 1px solid var(--White-10, rgba(255, 255, 255, 0.1));
+  padding-top: 4rem; /* 64px */
+  padding-bottom: 4rem; /* 64px */
+  border-top: 0.0625rem solid var(--White-10, rgba(255, 255, 255, 0.1)); /* 1px */
 }
 
 .content__text {
-  margin-bottom: 32px;
+  margin-bottom: 2rem; /* 32px */
   font-family: "TT Livret Text Trial", sans-serif;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem; /* 16px */
+  line-height: 1.5rem; /* 24px */
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-100, rgb(255, 255, 255));
@@ -609,5 +609,5 @@ h2 {
   max-width: 100%;
 }
 .main.close .content .container {
-  max-width: 1264px;
+  max-width: 79rem; /* 1264px */
 }
