--- a/scss/style.scss
+++ b/scss/style.scss
@@ -66,7 +66,7 @@ ul, ol {
     margin: 0;
 }
 .container {
-    max-width: 944px;
+    max-width: 59rem; /* 944px */
     width: 100%;
     margin: 0 auto;
     transition: all .5s ease;
@@ -85,65 +85,69 @@ body {
     font-family: 'TT Firs Text Trial', sans-serif;
     display: flex;
     justify-content: center;
-    max-width: 304px;
+    max-width: 19rem; /* 304px */
     width: 100%;
     min-height: 100vh;
-    border-right: 1px solid var(--White-5, rgba(255, 255, 255, 0.05));
+    border-right: 0.0625rem solid var(--White-5, rgba(255, 255, 255, 0.05)); /* 1px */
     transition: all .5s ease;
     overflow: hidden;
 }
 .aside__wrap {
     display: flex;
     flex-direction: column;
-    min-width: 304px;
-    width: 304px;
+    min-width: 19rem; /* 304px */
+    width: 19rem; /* 304px */
     max-height: 100vh;
     overflow-y: auto;
     position: relative;
 }
 .aside__wrap::-webkit-scrollbar {
-  width: 6px; }
+  width: 0.375rem; /* 6px */
+}
 
 .aside__wrap::-webkit-scrollbar-track {
-  background: rgb(51, 49, 49); }
+  background: rgb(51, 49, 49); 
+}
 
 .aside__wrap::-webkit-scrollbar-thumb {
-  background: rgb(99, 96, 96); }
+  background: rgb(99, 96, 96); 
+}
 
 .aside__wrap::-webkit-scrollbar-button {
-  display: none; }
+  display: none; 
+}
 
 .aside__logo {
-    padding: 32px;
+    padding: 2rem; /* 32px */
     position: sticky;
     top: 0;
     z-index: 2;
     background: rgba(22, 21, 21, 1);
-    border-bottom: 1px solid var(--White-5, rgba(255, 255, 255, 0.05));
+    border-bottom: 0.0625rem solid var(--White-5, rgba(255, 255, 255, 0.05)); /* 1px */
     img {
-        margin-bottom: 7px;
+        margin-bottom: 0.4375rem; /* 7px */
     }
     img:last-child {
         margin-bottom: 0;
     }
 }
 .aside__block {
-    border-top: 1px solid var(--White-5, rgba(255, 255, 255, 0.05));
-    padding: 24px 32px;
+    border-top: 0.0625rem solid var(--White-5, rgba(255, 255, 255, 0.05)); /* 1px */
+    padding: 1.5rem 2rem; /* 24px 32px */
     h5 {
         font-weight: 600;
-        font-size: 12px;
-        line-height: 16px;
+        font-size: 0.75rem; /* 12px */
+        line-height: 1rem; /* 16px */
         letter-spacing: 0%;
         vertical-align: middle;
-        margin-bottom: 24px;
-        margin-top: -8px;
+        margin-bottom: 1.5rem; /* 24px */
+        margin-top: -0.5rem; /* -8px */
     }
     h6 {
         // font-family: TT Livret Text Trial;
         font-weight: 400;
-        font-size: 12px;
-        line-height: 16px;
+        font-size: 0.75rem; /* 12px */
+        line-height: 1rem; /* 16px */
         letter-spacing: 0%;
         vertical-align: middle;
         color: var(--White-30, rgba(255, 255, 255, 0.3));
@@ -153,26 +157,26 @@ body {
     border-top: 0;
 }
 .aside__accordeon {
-    margin-bottom: 16px;
+    margin-bottom: 1rem; /* 16px */
     .btn {
         display: flex;
         font-weight: 600;
-        font-size: 12px;
-        line-height: 16px;
+        font-size: 0.75rem; /* 12px */
+        line-height: 1rem; /* 16px */
         letter-spacing: 0%;
         vertical-align: middle;
         color: var(--White-50, rgba(255, 255, 255, 0.5));
         transition: all .3s ease;
         cursor: pointer;
         span {
-            min-width: 56px;
+            min-width: 3.5rem; /* 56px */
             font-family: TT Livret Text Trial;
             font-weight: 400;
-            font-size: 12px;
-            line-height: 16px;
+            font-size: 0.75rem; /* 12px */
+            line-height: 1rem; /* 16px */
             letter-spacing: 0%;
             vertical-align: middle;
-            margin-right: 16px;
+            margin-right: 1rem; /* 16px */
             color: var(--White-30, rgba(255, 255, 255, 0.3));
         }
     }
@@ -185,19 +189,19 @@ body {
         li {
             font-family: 'TT Livret Text Trial', sans-serif;
             font-weight: 400;
-            font-size: 12px;
-            line-height: 16px;
+            font-size: 0.75rem; /* 12px */
+            line-height: 1rem; /* 16px */
             letter-spacing: 0%;
             vertical-align: middle;
-            margin-bottom: 16px;
-            padding-left: 13px;
+            margin-bottom: 1rem; /* 16px */
+            padding-left: 0.8125rem; /* 13px */
             position: relative;
         }
         li::before {
             content: "•";
             font-weight: 400;
-            font-size: 12px;
-            line-height: 16px;
+            font-size: 0.75rem; /* 12px */
+            line-height: 1rem; /* 16px */
             letter-spacing: 0%;
             vertical-align: middle;
             color: var(--White-25, rgba(255, 255, 255, 0.25));
@@ -212,26 +216,26 @@ body {
     }
     .btn.active + .block {
         height: auto;
-        padding-top: 24px;
-        padding-bottom: 16px;
+        padding-top: 1.5rem; /* 24px */
+        padding-bottom: 1rem; /* 16px */
     }
 }
 .aside__color {
     display: flex;
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem; /* 40px */
     h4 {
         display: flex;
         align-items: center;
         font-weight: 600;
-        font-size: 12px;
-        line-height: 16px;
+        font-size: 0.75rem; /* 12px */
+        line-height: 1rem; /* 16px */
         letter-spacing: 0%;
         vertical-align: middle;
         .icon {
-            width: 14px;
-            height: 14px;
+            width: 0.875rem; /* 14px */
+            height: 0.875rem; /* 14px */
             background: url(../img/color.svg) no-repeat center;
-            margin-right: 10px;
+            margin-right: 0.625rem; /* 10px */
         }
     }
 }
@@ -239,8 +243,8 @@ body {
     display: flex;
     margin-left: auto;
     .color {
-        width: 16px;
-        height: 16px;
+        width: 1rem; /* 16px */
+        height: 1rem; /* 16px */
         border-radius: 50%;
     }
     .color.white {
@@ -255,14 +259,14 @@ body {
     .item {
         display: flex;
         align-items: center;
-        margin-right: 8px;
+        margin-right: 0.5rem; /* 8px */
         cursor: pointer;
         p {
             width: 0;
             overflow: hidden;
             font-weight: 600;
-            font-size: 12px;
-            line-height: 16px;
+            font-size: 0.75rem; /* 12px */
+            line-height: 1rem; /* 16px */
             letter-spacing: 0%;
             vertical-align: middle;
         }
@@ -270,8 +274,8 @@ body {
     .item.active {
         p {
             width: auto;
-            padding-left: 4px;
-            padding-right: 8px;
+            padding-left: 0.25rem; /* 4px */
+            padding-right: 0.5rem; /* 8px */
         }
     }
     .item:last-child {
@@ -282,14 +286,14 @@ body {
     }
 }
 .aside__fonts {
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem; /* 20px */
     .item {
         display: flex;
         justify-content: space-between;
-        margin-bottom: 40px;
+        margin-bottom: 2.5rem; /* 40px */
         font-weight: 600;
-        font-size: 12px;
-        line-height: 16px;
+        font-size: 0.75rem; /* 12px */
+        line-height: 1rem; /* 16px */
         letter-spacing: 0%;
         vertical-align: middle;
     }
@@ -297,13 +301,13 @@ body {
         display: flex;
         align-items: center;
         .icon {
-            min-width: 16px;
-            width: 16px;
-            height: 16px;
+            min-width: 1rem; /* 16px */
+            width: 1rem; /* 16px */
+            height: 1rem; /* 16px */
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-right: 8px;
+            margin-right: 0.5rem; /* 8px */
         }
     }
     .item:last-child {
@@ -312,18 +316,18 @@ body {
 }
 .aside__botttm {
     margin-top: auto;
-    padding: 32px;
+    padding: 2rem; /* 32px */
     h5 {
         font-weight: 600;
-        font-size: 10px;
-        line-height: 16px;
+        font-size: 0.625rem; /* 10px */
+        line-height: 1rem; /* 16px */
         letter-spacing: 0%;
         vertical-align: middle;
     }
     a {
         font-weight: 400;
-        font-size: 10px;
-        line-height: 16px;
+        font-size: 0.625rem; /* 10px */
+        line-height: 1rem; /* 16px */
         letter-spacing: 0%;
         vertical-align: middle;
         color: var(--White-25, rgba(255, 255, 255, 0.25));
@@ -335,11 +339,11 @@ body {
 }
 // header
 .header {
-    max-width: 1500px;
+    max-width: 93.75rem; /* 1500px */
     width: 100%;
-    padding: 0 48px;
-    padding-top: 44px;
-    padding-bottom: 28px;
+    padding: 0 3rem; /* 0 48px */
+    padding-top: 2.75rem; /* 44px */
+    padding-bottom: 1.75rem; /* 28px */
     transition: all .5s ease;
     position: sticky;
     top: 0;
@@ -350,8 +354,8 @@ body {
     align-items: center;
 }
 .header__icon {
-    width: 32px;
-    height: 32px;
+    width: 2rem; /* 32px */
+    height: 2rem; /* 32px */
     background: url(../img/icon.svg) no-repeat center;
     border: 0;
 }
@@ -361,8 +365,8 @@ body {
     margin-left: auto;
 }
 .header__save {
-    width: 24px;
-    height: 24px;
+    width: 1.5rem; /* 24px */
+    height: 1.5rem; /* 24px */
     background: url(../img/save.svg) no-repeat center;
     border: 0;
 }
@@ -372,21 +376,21 @@ body {
     display: flex;
     align-items: center;
     font-weight: 600;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 0.75rem; /* 12px */
+    line-height: 1rem; /* 16px */
     letter-spacing: 0%;
     color: var(--White-100, rgba(255, 255, 255, 1));
     vertical-align: middle;
-    padding: 8px 18px 8px 16px;
+    padding: 0.5rem 1.125rem 0.5rem 1rem; /* 8px 18px 8px 16px */
     background: transparent;
-    border: 1px solid var(--White-10, rgba(255, 255, 255, 0.1));
-    border-radius: 100px;
-    margin-left: 16px;
+    border: 0.0625rem solid var(--White-10, rgba(255, 255, 255, 0.1)); /* 1px */
+    border-radius: 6.25rem; /* 100px */
+    margin-left: 1rem; /* 16px */
     .icon {
-        width: 24px;
-        height: 24px;
+        width: 1.5rem; /* 24px */
+        height: 1.5rem; /* 24px */
         background: url(../img/header-btn.svg) no-repeat center;
-        margin-right: 11px;
+        margin-right: 0.6875rem; /* 11px */
     }
 }
 // content
@@ -400,36 +404,40 @@ body {
     .container {
         position: relative;
         z-index: 2;
-        padding-top: 32px;
+        padding-top: 2rem; /* 32px */
     }
     h6 {
         font-family: 'TT Livret Text Trial', sans-serif;
         font-weight: 400;
-        font-size: 12px;
-        line-height: 16px;
+        font-size: 0.75rem; /* 12px */
+        line-height: 1rem; /* 16px */
         letter-spacing: 0%;
         vertical-align: middle;
         color: var(--White-50, rgba(255, 255, 255, 0.5));
     }
 }
 .content::-webkit-scrollbar {
-  width: 8px; }
+  width: 0.5rem; /* 8px */
+}
 
 .content::-webkit-scrollbar-track {
-  background: rgb(51, 49, 49); }
+  background: rgb(51, 49, 49); 
+}
 
 .content::-webkit-scrollbar-thumb {
-  background: rgb(99, 96, 96); }
+  background: rgb(99, 96, 96); 
+}
 
 .content::-webkit-scrollbar-button {
-  display: none; }
+  display: none; 
+}
 
 .content__video {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 685px;
+    height: 42.8125rem; /* 685px */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -443,7 +451,7 @@ body {
 .content__video::after {
     content: "";
     width: 100%;
-    height: 70px;
+    height: 4.375rem; /* 70px */
     position: absolute;
     z-index: 1;
     bottom: 0;
@@ -451,31 +459,31 @@ body {
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #141313 100%);
 }
 h1 {
-    margin: 64px 0 72px 0;
+    margin: 4rem 0 4.5rem 0; /* 64px 0 72px 0 */
     font-family: 'TT Livret Text Trial', sans-serif;
     font-weight: 600;
     font-style: italic;
-    font-size: 32px;
-    line-height: 48px;
+    font-size: 2rem; /* 32px */
+    line-height: 3rem; /* 48px */
     letter-spacing: 0%;
     vertical-align: middle;
     position: relative;
 }
 h1::before {
     content: "";
-    width: 16px;
-    height: 12px;
+    width: 1rem; /* 16px */
+    height: 0.75rem; /* 12px */
     position: absolute;
-    top: -32px;
+    top: -2rem; /* -32px */
     left: 0;
     background: url(../img/before.svg) no-repeat center;
 }
 h1::after {
     content: "";
-    width: 16px;
-    height: 12px;
+    width: 1rem; /* 16px */
+    height: 0.75rem; /* 12px */
     position: absolute;
-    bottom: -24px;
+    bottom: -1.5rem; /* -24px */
     right: 0;
     background: url(../img/after.svg) no-repeat center;
 }
@@ -483,22 +491,22 @@ h2 {
     font-family: 'TT Livret Text Trial', sans-serif;
     font-weight: 600;
     font-style: italic;
-    font-size: 32px;
-    line-height: 48px;
-    margin-bottom: 32px;
+    font-size: 2rem; /* 32px */
+    line-height: 3rem; /* 48px */
+    margin-bottom: 2rem; /* 32px */
     text-align: center;
 }
 .content__wrap {
-    padding-top: 64px;
-    padding-bottom: 64px;
-    border-top: 1px solid var(--White-10, rgba(255, 255, 255, 0.1))
+    padding-top: 4rem; /* 64px */
+    padding-bottom: 4rem; /* 64px */
+    border-top: 0.0625rem solid var(--White-10, rgba(255, 255, 255, 0.1)); /* 1px */
 }
 .content__text {
-    margin-bottom: 32px;
+    margin-bottom: 2rem; /* 32px */
     font-family: 'TT Livret Text Trial', sans-serif;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 1rem; /* 16px */
+    line-height: 1.5rem; /* 24px */
     letter-spacing: 0%;
     vertical-align: middle;
     color: var(--White-100, rgba(255, 255, 255, 1));
@@ -518,7 +526,7 @@ h2 {
     }
     .content {
         .container {
-            max-width: 1264px;
+            max-width: 79rem; /* 1264px */
         }
     }
 }
