--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,8 @@ ul, ol {
 body {
   background: rgb(22, 21, 21);
   color: var(--white);
+  -webkit-transition: font-size 0.3s ease;
+  transition: font-size 0.3s ease;
 }
 
 .main {
@@ -94,7 +96,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  max-width: 19rem; /* 304px */
+  max-width: 304px; /* 304px */
   width: 100%;
   min-height: 100vh;
   border-right: 0.0625rem solid var(--White-5, rgba(255, 255, 255, 0.05)); /* 1px */
@@ -111,8 +113,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  min-width: 19rem; /* 304px */
-  width: 19rem; /* 304px */
+  min-width: 304px; /* 304px */
+  width: 304px; /* 304px */
   max-height: 100vh;
   overflow-y: auto;
   position: relative;
@@ -365,6 +367,10 @@ body {
   margin-bottom: 0;
 }
 
+.aside__slider input {
+  width: 100%;
+}
+
 .aside__botttm {
   margin-top: auto;
   padding: 2rem; /* 32px */
@@ -391,7 +397,7 @@ body {
 }
 
 .header {
-  max-width: 93.75rem; /* 1500px */
+  max-width: 100rem; /* 1600px */
   width: 100%;
   padding: 0 3rem; /* 0 48px */
   padding-top: 2.75rem; /* 44px */
@@ -547,7 +553,8 @@ h1 {
   letter-spacing: 0%;
   vertical-align: middle;
   position: relative;
-  color: var(--white);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 h1::before {
@@ -578,6 +585,19 @@ h2 {
   line-height: 3rem; /* 48px */
   margin-bottom: 2rem; /* 32px */
   text-align: center;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+h3 {
+  font-family: "TT Livret Text Trial", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+  font-size: 1.5rem; /* 32px */
+  line-height: 1.5rem; /* 48px */
+  margin-bottom: 2rem; /* 32px */
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .content__wrap {
@@ -595,6 +615,8 @@ h2 {
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-100, rgb(255, 255, 255));
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 .content__text b {
   font-weight: 600;
@@ -611,4 +633,49 @@ h2 {
 }
 .main.close .content .container {
   max-width: 79rem; /* 1264px */
+}
+
+/* Классы для масштабирования */
+.x1 {
+  font-size: 100%;
+}
+
+.x2 h1, .x2 h2 {
+  font-size: 2.2rem;
+}
+.x2 h3 {
+  font-size: 1.65rem;
+}
+.x2 .content__text {
+  font-size: 1.1rem;
+}
+
+.x3 h1, .x3 h2 {
+  font-size: 2.4rem;
+}
+.x3 h3 {
+  font-size: 1.8rem;
+}
+.x3 .content__text {
+  font-size: 1.2rem;
+}
+
+.x4 h1, .x4 h2 {
+  font-size: 2.6rem;
+}
+.x4 h3 {
+  font-size: 1.95rem;
+}
+.x4 .content__text {
+  font-size: 1.3rem;
+}
+
+.x5 h1, .x5 h2 {
+  font-size: 2.8rem;
+}
+.x5 h3 {
+  font-size: 2.1rem;
+}
+.x5 .content__text {
+  font-size: 1.4rem;
 }
