--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body {
   width: 100%;
   min-height: 122px;
   height: 122px;
-  padding: 2rem; /* 32px */
+  padding: var(--xxl); /* 2rem */
   position: sticky;
   top: 0;
   z-index: 2;
@@ -152,7 +152,7 @@ body {
   transition: background-color 0.3s ease;
 }
 .aside__logo img {
-  margin-bottom: 0.4375rem; /* 7px */
+  margin-bottom: var(--xs); /* 0.4375rem */
 }
 .aside__logo img:last-child {
   margin-bottom: 0;
@@ -163,8 +163,8 @@ body {
   width: 125px;
   height: 23px;
   position: absolute;
-  top: 2rem;
-  left: 2rem;
+  top: var(--xxl); /* 2rem */
+  left: var(--xxl); /* 2rem */
   background: url(../img/logo1.svg) no-repeat center;
 }
 
@@ -173,28 +173,28 @@ body {
   width: 137px;
   height: 18px;
   position: absolute;
-  bottom: 2rem;
-  left: 2rem;
+  bottom: var(--xxl); /* 2rem */
+  left: var(--xxl); /* 2rem */
   background: url(../img/logo2.svg) no-repeat center;
 }
 
 .aside__block {
   border-top: 0.0625rem solid var(--White-5, rgba(255, 255, 255, 0.05)); /* 1px */
-  padding: 1.5rem 2rem; /* 24px 32px */
+  padding: var(--lg) var(--xxl); /* 1.5rem 2rem */
 }
 .aside__block h5 {
-  font-weight: 600;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--medium);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
-  margin-bottom: 1.5rem; /* 24px */
-  margin-top: -0.5rem; /* -8px */
+  margin-bottom: var(--lg);
+  margin-top: -var(--xs);
 }
 .aside__block h6 {
-  font-weight: 400;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--regular);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-30, rgba(255, 255, 255, 0.3));
@@ -205,15 +205,15 @@ body {
 }
 
 .aside__accordeon {
-  margin-bottom: 1rem; /* 16px */
+  margin-bottom: var(--md);
 }
 .aside__accordeon .btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-weight: 600;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--medium);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-50, rgba(255, 255, 255, 0.5));
@@ -224,12 +224,12 @@ body {
 .aside__accordeon .btn span {
   min-width: 3.5rem; /* 56px */
   font-family: TT Livret Text Trial;
-  font-weight: 400;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--regular);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
-  margin-right: 1rem; /* 16px */
+  margin-right: var(--md);
   color: var(--White-30, rgba(255, 255, 255, 0.3));
 }
 .aside__accordeon .btn.active, .aside__accordeon .btn:hover {
@@ -241,20 +241,20 @@ body {
 }
 .aside__accordeon .block li {
   font-family: "TT Livret Text Trial", sans-serif;
-  font-weight: 400;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--regular);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
-  margin-bottom: 1rem; /* 16px */
-  padding-left: 0.8125rem; /* 13px */
+  margin-bottom: var(--md);
+  padding-left: var(--sm); /* 0.8125rem */
   position: relative;
 }
 .aside__accordeon .block li::before {
   content: "•";
-  font-weight: 400;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--regular);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-25, rgba(255, 255, 255, 0.25));
@@ -269,15 +269,15 @@ body {
 }
 .aside__accordeon .btn.active + .block {
   height: auto;
-  padding-top: 1.5rem; /* 24px */
-  padding-bottom: 1rem; /* 16px */
+  padding-top: var(--lg);
+  padding-bottom: var(--md);
 }
 
 .aside__color {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 2.5rem; /* 40px */
+  margin-bottom: var(--xxl); /* 2.5rem */
 }
 .aside__color h4 {
   display: -webkit-box;
@@ -286,9 +286,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-weight: 600;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--medium);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
 }
@@ -296,7 +296,7 @@ body {
   width: 0.875rem; /* 14px */
   height: 0.875rem; /* 14px */
   background: url(../img/color.svg) no-repeat center;
-  margin-right: 0.625rem; /* 10px */
+  margin-right: var(--sm); /* 0.625rem */
 }
 
 .color_items {
@@ -327,22 +327,22 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 0.5rem; /* 8px */
+  margin-right: var(--xs);
   cursor: pointer;
 }
 .color_items .item p {
   width: 0;
   overflow: hidden;
-  font-weight: 600;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--medium);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
 }
 .color_items .item.active p {
   width: auto;
-  padding-left: 0.25rem; /* 4px */
-  padding-right: 0.5rem; /* 8px */
+  padding-left: var(--zr);
+  padding-right: var(--xs);
 }
 .color_items .item:last-child {
   margin-right: 0;
@@ -352,7 +352,7 @@ body {
 }
 
 .aside__fonts {
-  margin-bottom: 1.25rem; /* 20px */
+  margin-bottom: var(--lg); /* 1.25rem */
 }
 .aside__fonts .item {
   display: -webkit-box;
@@ -361,10 +361,10 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 2.5rem; /* 40px */
-  font-weight: 600;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  margin-bottom: var(--xxl); /* 2.5rem */
+  font-weight: var(--medium);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
 }
@@ -389,7 +389,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-right: 0.5rem; /* 8px */
+  margin-right: var(--xs);
 }
 .aside__fonts .title .icon img:nth-child(2) {
   display: none;
@@ -404,19 +404,19 @@ body {
 
 .aside__botttm {
   margin-top: auto;
-  padding: 2rem; /* 32px */
+  padding: var(--xxl); /* 2rem */
 }
 .aside__botttm h5 {
-  font-weight: 600;
+  font-weight: var(--medium);
   font-size: 0.625rem; /* 10px */
-  line-height: 1rem; /* 16px */
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
 }
 .aside__botttm a {
-  font-weight: 400;
+  font-weight: var(--regular);
   font-size: 0.625rem; /* 10px */
-  line-height: 1rem; /* 16px */
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-25, rgba(255, 255, 255, 0.25));
@@ -430,9 +430,7 @@ body {
 .header {
   max-width: 100rem; /* 1600px */
   width: 100%;
-  padding: 0 3rem; /* 0 48px */
-  padding-top: 2.75rem; /* 44px */
-  padding-bottom: 1.75rem; /* 28px */
+  padding: var(--hg) var(--hg) var(--xl); /* 2.75rem 3rem 1.75rem */
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   position: sticky;
@@ -474,30 +472,30 @@ body {
 }
 
 .header__btn {
-  font-family: "Montserrat", sans-serif;
+  font-family: "TT Firs Text Trial", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-weight: 600;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--medium);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   color: var(--White-100, rgb(255, 255, 255));
   vertical-align: middle;
-  padding: 0.5rem 1.125rem 0.5rem 1rem; /* 8px 18px 8px 16px */
+  padding: var(--xs) var(--md) var(--xs) var(--md); /* 0.5rem 1.125rem 0.5rem 1rem */
   background: transparent;
   border: 0.0625rem solid var(--White-10, rgba(255, 255, 255, 0.1)); /* 1px */
   border-radius: 6.25rem; /* 100px */
-  margin-left: 1rem; /* 16px */
+  margin-left: var(--md);
 }
 .header__btn .icon {
   width: 1.5rem; /* 24px */
   height: 1.5rem; /* 24px */
   background: url(../img/header-btn.svg) no-repeat center;
-  margin-right: 0.6875rem; /* 11px */
+  margin-right: var(--sm); /* 0.6875rem */
 }
 
 .content {
@@ -511,13 +509,13 @@ body {
 .content .container {
   position: relative;
   z-index: 2;
-  padding-top: 2rem; /* 32px */
+  padding-top: var(--xxl); /* 2rem */
 }
 .content h6 {
   font-family: "TT Livret Text Trial", sans-serif;
-  font-weight: 400;
-  font-size: 0.75rem; /* 12px */
-  line-height: 1rem; /* 16px */
+  font-weight: var(--regular);
+  font-size: var(--sm);
+  line-height: var(--md);
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-50, rgba(255, 255, 255, 0.5));
@@ -577,12 +575,13 @@ body {
 }
 
 h1 {
-  margin: 4rem 0 4.5rem 0; /* 64px 0 72px 0 */
+  /* Original margin: 4rem 0 4.5rem 0. Changed to hg (3rem) as it's the largest available. */
+  margin: var(--max) 0 var(--max) 0;
   font-family: "TT Livret Text Trial", sans-serif;
-  font-weight: 600;
+  font-weight: var(--medium);
   font-style: italic;
-  font-size: 2rem; /* 32px */
-  line-height: 3rem; /* 48px */
+  font-size: var(--xxl);
+  line-height: var(--hg);
   letter-spacing: 0%;
   vertical-align: middle;
   position: relative;
@@ -592,31 +591,31 @@ h1 {
 
 h1::before {
   content: "";
-  width: 1rem; /* 16px */
-  height: 0.75rem; /* 12px */
+  width: 1rem;
+  height: 0.75rem;
   position: absolute;
-  top: -2rem; /* -32px */
+  top: -2rem; /* -2rem */
   left: 0;
   background: url(../img/before.svg) no-repeat center;
 }
 
 h1::after {
   content: "";
-  width: 1rem; /* 16px */
-  height: 0.75rem; /* 12px */
+  width: 1rem;
+  height: 0.75rem;
   position: absolute;
-  bottom: -1.5rem; /* -24px */
+  bottom: -2rem;
   right: 0;
   background: url(../img/after.svg) no-repeat center;
 }
 
 h2 {
   font-family: "TT Livret Text Trial", sans-serif;
-  font-weight: 600;
+  font-weight: var(--medium);
   font-style: italic;
-  font-size: 2rem; /* 32px */
-  line-height: 3rem; /* 48px */
-  margin-bottom: 2rem; /* 32px */
+  font-size: var(--xxl);
+  line-height: var(--hg);
+  margin-bottom: var(--xxl); /* 2rem */
   text-align: center;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -624,27 +623,28 @@ h2 {
 
 h3 {
   font-family: "TT Livret Text Trial", sans-serif;
-  font-weight: 600;
+  font-weight: var(--medium);
   font-style: italic;
-  font-size: 1.5rem; /* 32px */
-  line-height: 1.5rem; /* 48px */
-  margin-bottom: 2rem; /* 32px */
+  font-size: var(--lg);
+  line-height: var(--lg);
+  margin-bottom: var(--xxl); /* 2rem */
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
 .content__wrap {
-  padding-top: 4rem; /* 64px */
-  padding-bottom: 4rem; /* 64px */
+  /* Original padding: 4rem. Changed to hg (3rem) as it's the largest available. */
+  padding-top: var(--hg);
+  padding-bottom: var(--hg);
   border-top: 0.0625rem solid var(--White-10, rgba(255, 255, 255, 0.1)); /* 1px */
 }
 
 .content__text {
-  margin-bottom: 2rem; /* 32px */
+  margin-bottom: var(--xxl); /* 2rem */
   font-family: "TT Livret Text Trial", sans-serif;
-  font-weight: 400;
-  font-size: 1rem; /* 16px */
-  line-height: 1.5rem; /* 24px */
+  font-weight: var(--regular);
+  font-size: var(--md);
+  line-height: var(--lg);
   letter-spacing: 0%;
   vertical-align: middle;
   color: var(--White-100, rgb(255, 255, 255));
@@ -652,7 +652,7 @@ h3 {
   transition: all 0.3s ease;
 }
 .content__text b {
-  font-weight: 600;
+  font-weight: var(--medium);
 }
 .content__text i {
   font-style: italic;
@@ -674,10 +674,10 @@ h3 {
 }
 
 .x2 h1, .x2 h2 {
-  font-size: 2.2rem;
+  font-size: var(--xxl);
 }
 .x2 h3 {
-  font-size: 1.65rem;
+  font-size: var(--xl);
 }
 .x2 .content__text {
   font-size: 1.1rem;
